Demos: prevent vertical scrollbar on short demo pages.

--- a/docs/demos/_assets/css/jqm-demos.css
+++ b/docs/demos/_assets/css/jqm-demos.css
@@ -181,6 +181,11 @@ img { max-width: 100%; }
 	margin-top: 10px;
 	min-height: auto;
 	bottom: 0;
+	overflow: hidden;
+}
+.demos .ui-panel-inner {
+	margin-bottom: -10px;
+	padding-bottom: 25px;
 }
 
 .demos a.demo-section-link {
